--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="about" id="about">
       <h2 class="heading">About <span>Me</span></h2>
       <div class="about-img">
-        <img src="/imgs/newlogo.png" alt="" />
+        <img src="imgs/newlogo.png" alt="" />
         <span class="cirlce"></span>
       </div>
       <div class="about-content">
