--- a/index.html
+++ b/index.html
@@ -31,19 +31,30 @@
           <h3>Electrical Engineer</h3>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-          repellendus provident beatae vitae. Deleniti aspernatur, atque iure
-          recusandae natus amet eius ipsa facere culpa nihil minima eos.
+          Innovative Electrical Electronics Engineer, blending technical
+          expertise with creative problem-solving. Dedicated to advancing
+          technology and delivering impactful solutions, driven by a passion for
+          excellence and a commitment to continuous learning
         </p>
         <div class="btn-box">
-          <a href="#" class="btn">Hire Me</a>
-          <a href="#" class="btn">Contact Me</a>
+          <a
+            href="https://www.linkedin.com/in/ibrahim-makkawi-3a9a2b2a5/"
+            class="btn"
+            >Hire Me</a
+          >
+          <a href="#" id="contact-me" class="btn">Contact Me</a>
         </div>
       </div>
       <div class="home-sci">
-        <a href="#"><i class="bx bxl-linkedin-square"></i></a>
-        <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-        <a href="#"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/ibrahim-makkawi-3a9a2b2a5/"
+          ><i class="bx bxl-linkedin-square"></i
+        ></a>
+        <a href="https://www.instagram.com/ibrahim._.makkawi/"
+          ><i class="bx bxl-instagram-alt"></i
+        ></a>
+        <a href="https://github.com/ibrahimmakkawi"
+          ><i class="bx bxl-github"></i
+        ></a>
       </div>
       <div class="home-imghover"></div>
     </section>
@@ -56,10 +67,8 @@
       <div class="about-content">
         <h3>Electrical Engineer!</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nisi
-          excepturi repudiandae optio distinctio, consectetur mollitia accusamus
-          id doloribus repellendus. Alias dolores enim deleniti reiciendis, nemo
-          itaque? Officiis, tempora ratione!
+          Dynamic Electrical Electronics Engineer with a passion for innovation
+          and a proven track record of delivering high-quality solution
         </p>
         <div class="btn-box2">
           <a href="#" class="btn">Read More</a>
@@ -75,13 +84,15 @@
             <div class="education-content">
               <div class="content">
                 <div class="year">
-                  <i class="bx bx-calendar"><span> 2023 - 2024 </span></i>
+                  <i class="bx bx-calendar"><span> 2020 - 2024 </span></i>
                 </div>
                 <h3>Bachelor's Degree - University</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Labore facere culpa error consectetur laboriosam architecto
-                  necessitatibus doloribus cum hic delectus!
+                  Over the course of four enriching years at the University of
+                  Niğde Ömer Halisdemir, I delved deeply into the realm of
+                  electrical electronics engineering. Through engaging lectures,
+                  practical experiments, and teamwork, I honed my skills and
+                  cultivated a strong foundation in this ever-evolving field
                 </p>
               </div>
             </div>
@@ -94,13 +105,15 @@
             <div class="education-content">
               <div class="content">
                 <div class="year">
-                  <i class="bx bx-calendar"><span> 2023 - 2024 </span></i>
+                  <i class="bx bx-calendar"><span> 2020 - 2024 </span></i>
                 </div>
                 <h3>Electrical Engineer - Company</h3>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Labore facere culpa error consectetur laboriosam architecto
-                  necessitatibus doloribus cum hic delectus!
+                  Over the course of four enriching years at the University of
+                  Niğde Ömer Halisdemir, I delved deeply into the realm of
+                  electrical electronics engineering. Through engaging lectures,
+                  practical experiments, and teamwork, I honed my skills and
+                  cultivated a strong foundation in this ever-evolving field
                 </p>
               </div>
             </div>
@@ -111,70 +124,105 @@
     <section class="skills" id="skills">
       <h2 class="heading">My <span>skills</span></h2>
       <div class="skills-row">
+        <div class="skillss-column">
+          <h3 class="title">Electrical Skills</h3>
+          <div class="skillss-box">
+            <div class="skillss-content">
+              <div class="progresss">
+                <h3>Circuit Design and Analysis</h3>
+              </div>
+              <div class="progresss">
+                <h3>PCB Design and Layout</h3>
+              </div>
+              <div class="progresss">
+                <h3>Microcontroller Programming (C, C++)</h3>
+              </div>
+              <div class="progresss">
+                <h3>Power Electronics</h3>
+              </div>
+              <div class="progresss">
+                <h3>Altium Designer</h3>
+              </div>
+              <div class="progresss">
+                <h3>AutoCAD</h3>
+              </div>
+              <div class="progresss">
+                <h3>Renewable Energy Systems</h3>
+              </div>
+              <div class="progresss">
+                <h3>Electric Power Systems</h3>
+              </div>
+              <div class="progresss">
+                <h3>Energy Efficiency Optimization</h3>
+              </div>
+              <div class="progresss">
+                <h3>Multisim</h3>
+              </div>
+              <div class="progresss">
+                <h3>Proteus</h3>
+              </div>
+              <div class="progresss">
+                <h3>Team Collaboration</h3>
+              </div>
+              <div class="progresss">
+                <h3>Time Management</h3>
+              </div>
+              <div class="progresss">
+                <h3>Analytical Thinking</h3>
+              </div>
+              <div class="progresss">
+                <h3>Continuous Learning</h3>
+              </div>
+              <div class="progresss">
+                <h3>Communication Skills</h3>
+              </div>
+              <div class="progresss">
+                <h3>Problem-Solving</h3>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="skills-column">
-          <h3 class="title">Electriacl Skills</h3>
+          <h3 class="title">Programming Skills</h3>
           <div class="skills-box">
             <div class="skills-content">
+              <div class="progress">
+                <h3>C/C++ <span>75%</span></h3>
+                <div class="bar"><span></span></div>
+              </div>
               <div class="progress">
                 <h3>HTML <span>90%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
               <div class="progress">
-                <h3>HTML <span>80%</span></h3>
+                <h3>CSS<span>90%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
               <div class="progress">
-                <h3>HTML <span>60%</span></h3>
+                <h3>Java Script <span>65%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
               <div class="progress">
-                <h3>HTML <span>70%</span></h3>
+                <h3>Dart/Flutter<span>60%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
           </div>
         </div>
         <div class="skills-column">
-          <h3 class="title">Electriacl Skills</h3>
+          <h3 class="title">Languages</h3>
           <div class="skills-box">
             <div class="skills-content">
               <div class="progress">
-                <h3>HTML <span>90%</span></h3>
+                <h3>Arabic<span>100%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
               <div class="progress">
-                <h3>HTML <span>80%</span></h3>
+                <h3>English<span>70%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
               <div class="progress">
-                <h3>HTML <span>60%</span></h3>
-                <div class="bar"><span></span></div>
-              </div>
-              <div class="progress">
-                <h3>HTML <span>70%</span></h3>
-                <div class="bar"><span></span></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="skills-column">
-          <h3 class="title">Electriacl Skills</h3>
-          <div class="skills-box">
-            <div class="skills-content">
-              <div class="progress">
-                <h3>HTML <span>90%</span></h3>
-                <div class="bar"><span></span></div>
-              </div>
-              <div class="progress">
-                <h3>HTML <span>80%</span></h3>
-                <div class="bar"><span></span></div>
-              </div>
-              <div class="progress">
-                <h3>HTML <span>60%</span></h3>
-                <div class="bar"><span></span></div>
-              </div>
-              <div class="progress">
-                <h3>HTML <span>70%</span></h3>
+                <h3>Turkish<span>90%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
             </div>
