--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me</span></h2>
       <div class="content">
-        <div class="card">
+        <a href="tel:905549569785" class="card">
           <div class="icon">
             <i class="bx bxs-phone"></i>
           </div>
@@ -241,8 +241,8 @@
             <h3>Phone</h3>
             <p>+90 5549569785</p>
           </div>
-        </div>
-        <div class="card">
+        </a>
+        <a href="mailto:barhoummakkawi@gmail.com" class="card">
           <div class="icon">
             <i class="bx bxs-envelope"></i>
           </div>
@@ -250,7 +250,7 @@
             <h3>Email</h3>
             <p>barhoummakkawi@gmail.com</p>
           </div>
-        </div>
+        </a>
       </div>
     </section>
     <footer class="footer">
